<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.auth.RegisterActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textColor="@color/purple_500"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNamaRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:drawableLeft="@drawable/ic_person"
        android:drawableTint="@color/purple_500"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:background="@color/white"
        android:inputType="textPersonName"
        android:hint="@string/nama_lengkap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextEmailRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:drawableLeft="@drawable/ic_email"
        android:drawableTint="@color/purple_500"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:background="@color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextNamaRegister"
        app:layout_constraintStart_toStartOf="@+id/editTextNamaRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextNamaRegister"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextNoHpRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:drawableLeft="@drawable/ic_call"
        android:drawableTint="@color/purple_500"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:background="@color/white"
        android:hint="@string/no_hp"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailRegister"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailRegister"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextAlamatLengkap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:drawableLeft="@drawable/ic_address"
        android:drawableTint="@color/purple_500"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:background="@color/white"
        android:hint="@string/alamat_lengkap"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/editTextNoHpRegister"
        app:layout_constraintStart_toStartOf="@+id/editTextNoHpRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextNoHpRegister"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextKodePos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:drawableLeft="@drawable/ic_map"
        android:drawableTint="@color/purple_500"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:background="@color/white"
        android:hint="@string/kode_pos"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextAlamatLengkap"
        app:layout_constraintStart_toStartOf="@+id/editTextAlamatLengkap"
        app:layout_constraintTop_toBottomOf="@+id/editTextAlamatLengkap"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:drawableLeft="@drawable/ic_password"
        android:drawableTint="@color/purple_500"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextKodePos"
        app:layout_constraintStart_toStartOf="@+id/editTextTextKodePos"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextKodePos"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/to_login_btn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/textViewToLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>